# fluent-notes-dapp

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
contracts/rust/: Cargo.toml
contracts/rust/src/: lib.rs
public/: index.html
src/: App.jsx  index.css
src/components/: ConnectWallet.jsx  Header.jsx  NoteEditor.jsx  NotesList.jsx
src/contracts/: abis.js  addresses.js
